[gd_scene load_steps=44 format=2]

[ext_resource path="res://font/roundy_rainbows.otf" type="DynamicFontData" id=1]
[ext_resource path="res://models/uzi/Uzi.glb" type="PackedScene" id=2]
[ext_resource path="res://active_reload/active_reload.gd" type="Script" id=3]
[ext_resource path="res://Entities/Gun.gd" type="Script" id=4]
[ext_resource path="res://Audio/dry_fire.ogg" type="AudioStream" id=5]
[ext_resource path="res://Audio/shooting.ogg" type="AudioStream" id=6]
[ext_resource path="res://Audio/release_mag.ogg" type="AudioStream" id=7]
[ext_resource path="res://Audio/insert_mag.ogg" type="AudioStream" id=8]
[ext_resource path="res://active_reload/pin.png" type="Texture" id=9]
[ext_resource path="res://active_reload/pin_faded.png" type="Texture" id=10]
[ext_resource path="res://active_reload/second_area.jpg.png" type="Texture" id=11]
[ext_resource path="res://active_reload/oval_bar.png" type="Texture" id=12]
[ext_resource path="res://active_reload/sweet_spot.jpg.png" type="Texture" id=13]
[ext_resource path="res://models/uzi/mat15.material" type="Material" id=14]
[ext_resource path="res://models/uzi/mat16.material" type="Material" id=15]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="Animation" id=2]
resource_name = "active_reload"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("mag:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.0511051, -1.32162, -0.00551 ), Vector3( -0.051, -0.306, -0.006 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mag:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_reloading_sound"
}, {
"args": [  ],
"method": "_fill_mag"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_interface"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mag:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.0511051, -0.305931, -0.00551 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -0.20479, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 15, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("mag:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.0511051, -0.305931, -0.00551 ), Vector3( -0.0511051, -1.32162, -0.00551 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("mag:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ), Vector3( 0, 0, 180 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_unloading_sound"
} ]
}

[sub_resource type="Animation" id=5]
length = 0.09
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 10 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.09 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_fire"
} ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.0163009, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_bullet_sound"
}, {
"args": [  ],
"method": "_check_bullet_count"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("mag:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.0511051, -0.305931, -0.00551 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("mag:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.0511051, -1.32162, -0.00551 ), Vector3( -0.051, -0.306, -0.006 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mag:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_reloading_sound"
}, {
"args": [  ],
"method": "_fill_mag"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_interface"
} ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("mag:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( -0.0511051, -1.32162, -0.00551 ), Vector3( -0.051, -0.306, -0.006 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("mag:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 180 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.9, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "_reloading_sound"
}, {
"args": [  ],
"method": "_fill_mag"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_reset_interface"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "active_reload"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "default"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "drop_mag"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "fire"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "normal_reload"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "quick_reload"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]

[sub_resource type="AnimationNodeStateMachineTransition" id=15]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachine" id=23]
states/active_reload/node = SubResource( 8 )
states/active_reload/position = Vector2( 1075, 119 )
states/default/node = SubResource( 9 )
states/default/position = Vector2( 775, 119 )
states/drop_mag/node = SubResource( 10 )
states/drop_mag/position = Vector2( 673, 264 )
states/fire/node = SubResource( 11 )
states/fire/position = Vector2( 490, 119 )
states/normal_reload/node = SubResource( 12 )
states/normal_reload/position = Vector2( 864, 264 )
states/quick_reload/node = SubResource( 13 )
states/quick_reload/position = Vector2( 1075, 176 )
transitions = [ "default", "fire", SubResource( 14 ), "fire", "default", SubResource( 15 ), "fire", "drop_mag", SubResource( 16 ), "default", "drop_mag", SubResource( 17 ), "drop_mag", "normal_reload", SubResource( 18 ), "normal_reload", "active_reload", SubResource( 19 ), "normal_reload", "quick_reload", SubResource( 20 ), "quick_reload", "default", SubResource( 21 ), "active_reload", "default", SubResource( 22 ) ]
start_node = "default"
graph_offset = Vector2( 106, -43 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=24]

[sub_resource type="CapsuleShape2D" id=25]
radius = 11.0951
height = 123.083

[sub_resource type="RectangleShape2D" id=26]
extents = Vector2( 85.592, 33.4632 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 13.5806, 51.2812 )

[sub_resource type="DynamicFont" id=28]
size = 100
outline_size = 3
outline_color = Color( 1, 0.780392, 0, 1 )
font_data = ExtResource( 1 )

[node name="Uzi" instance=ExtResource( 2 )]
script = ExtResource( 4 )
default_mag_size = 30
reload_time = 1.9

[node name="group1708819615" parent="." index="1"]
visible = false

[node name="handle" type="MeshInstance" parent="." index="9"]
transform = Transform( 0.0650739, 0, 0, 0, 0.130788, 0, 0, 0, -0.0364051, -0.0511051, -0.229274, -0.00551 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )

[node name="mag" type="MeshInstance" parent="." index="10"]
transform = Transform( 0.0423024, -1.80037e-08, 0, 3.69819e-09, 0.205938, 0, 0, 0, -0.0226913, -0.0511051, -0.305931, -0.00551 )
mesh = SubResource( 1 )
material/0 = ExtResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="11"]
anims/active_reload = SubResource( 2 )
anims/default = SubResource( 3 )
anims/drop_mag = SubResource( 4 )
anims/fire = SubResource( 5 )
anims/normal_reload = SubResource( 6 )
anims/quick_reload = SubResource( 7 )

[node name="AnimationTree" type="AnimationTree" parent="." index="12"]
tree_root = SubResource( 23 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 24 )

[node name="ShootingSound" type="AudioStreamPlayer" parent="." index="13"]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="LoadingSound" type="AudioStreamPlayer" parent="." index="14"]
stream = ExtResource( 8 )
volume_db = -3.0

[node name="UnloadingSound" type="AudioStreamPlayer" parent="." index="15"]
stream = ExtResource( 7 )
volume_db = -3.0

[node name="DryFireSound" type="AudioStreamPlayer" parent="." index="16"]
stream = ExtResource( 5 )
volume_db = -4.0
pitch_scale = 1.2

[node name="ActiveReload" type="Node2D" parent="." index="17"]
visible = false
position = Vector2( 1590.53, 71.7084 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 3 )

[node name="Pin" type="Area2D" parent="ActiveReload" index="0" groups=[
"Pin",
]]
position = Vector2( -455.774, 0 )
priority = 2.0
monitorable = false

[node name="Sprite" type="Sprite" parent="ActiveReload/Pin" index="0"]
z_index = 1
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveReload/Pin" index="1"]
position = Vector2( -0.353546, -0.353554 )
z_index = 1
shape = SubResource( 25 )

[node name="FeedbackPin" type="Area2D" parent="ActiveReload" index="1" groups=[
"Pin",
]]
visible = false
position = Vector2( -455.774, 0 )
priority = 2.0
monitorable = false

[node name="Sprite" type="Sprite" parent="ActiveReload/FeedbackPin" index="0"]
z_index = 1
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveReload/FeedbackPin" index="1"]
position = Vector2( -0.353546, -0.353554 )
z_index = 1
shape = SubResource( 25 )

[node name="OuterArea" type="Area2D" parent="ActiveReload" index="2" groups=[
"Outer",
]]
position = Vector2( -133.432, 0 )
scale = Vector2( 0.533333, 1 )

[node name="Sprite" type="Sprite" parent="ActiveReload/OuterArea" index="0"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveReload/OuterArea" index="1"]
shape = SubResource( 26 )

[node name="SweetSpot" type="Area2D" parent="ActiveReload" index="3" groups=[
"Sweet",
]]
position = Vector2( -90.8101, 0 )

[node name="Sprite" type="Sprite" parent="ActiveReload/SweetSpot" index="0"]
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActiveReload/SweetSpot" index="1"]
shape = SubResource( 27 )

[node name="Bar" type="Sprite" parent="ActiveReload" index="4"]
z_index = -1
texture = ExtResource( 12 )

[node name="PinStart" type="Position2D" parent="ActiveReload" index="5"]
position = Vector2( -455, 0 )

[node name="PinEnd" type="Position2D" parent="ActiveReload" index="6"]
position = Vector2( 455, 0 )

[node name="Control" type="Control" parent="ActiveReload" index="7"]
margin_left = -451.893
margin_top = 65.172
margin_right = 459.107
margin_bottom = 510.172
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ActiveReload/Control" index="0"]
visible = false
margin_left = 79.9998
margin_top = 6.25
margin_right = 527.0
margin_bottom = 115.25
custom_fonts/font = SubResource( 28 )
text = "PERFECT!"
[connection signal="area_entered" from="ActiveReload/Pin" to="ActiveReload" method="_on_Pin_area_entered"]
[connection signal="area_exited" from="ActiveReload/Pin" to="ActiveReload" method="_on_Pin_area_exited"]
